syntax = "proto3";

package types;

message SerializedJson { string data = 1; }